--- a/webadmin/templates/login.html
+++ b/webadmin/templates/login.html
@@ -42,14 +42,6 @@
                     >
                 </div>
 
-                <div class="form-options">
-                    <label class="checkbox-container">
-                        <input type="checkbox" name="remember" id="remember">
-                        <span>Remember me</span>
-                    </label>
-                    <a href="#" class="forgot-password">Forgot password?</a>
-                </div>
-
                 <button type="submit" class="login-button">
                     Sign In
                 </button>
@@ -57,17 +49,11 @@
 
             <div class="login-footer">
                 <p class="warning-text">
-                    <span class="warning-icon">⚠️</span>
+                    <span class="warning-icon">⚠</span>
                     Authorized Personnel Only
                 </p>
                 <p class="version">Phishly v1.0.0 • Security Awareness Platform</p>
             </div>
-        </div>
-
-        <div class="background-decoration">
-            <div class="decoration-circle circle-1"></div>
-            <div class="decoration-circle circle-2"></div>
-            <div class="decoration-circle circle-3"></div>
         </div>
     </div>
 
