--- a/webadmin/templates/login.html
+++ b/webadmin/templates/login.html
@@ -11,7 +11,7 @@
         <div class="login-card">
             <div class="login-header">
                 <div class="logo">
-                    <span class="logo-icon">🐟</span>
+                    <span class="logo-icon">◉</span>
                     <h1>Phishly</h1>
                 </div>
                 <p class="subtitle">Admin Portal</p>
