--- a/webadmin/templates/email_templates.html
+++ b/webadmin/templates/email_templates.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Templates - Phishly Admin</title>
+    <script src="{{ url_for('static', filename='js/theme-loader.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/email_templates.css') }}">
 </head>
